# revChatGPTAuth

./: README.md  pyproject.toml
revChatGPTAuth/: __init__.py  chatgpt_access_token_parser.py  openai_cookie_parser.py  supported_browser.py  utils.py
revChatGPTAuth/test/: test_chatgpt_access_token_parser.py  test_openai_cookie_parser.py
revChatGPTAuth_temp/: openai_cookie_parser.py
revchatgptauth/: chatgpt_access_token_parser.py
